<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.EditPostActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:focusable="true">
        <requestFocus />

        <Button
            android:id="@+id/publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Publicar" />

        <EditText
            android:id="@+id/postText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:hint="Tus pensamientos..."
            android:lines="6"
            android:textSize="24sp">

            <requestFocus />
        </EditText>
        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayoutButtons">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnImage"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/image"
                    android:contentDescription="@string/descripcion_audio"/>

                <Button
                    android:id="@+id/btnVideo"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/ic_movie_black_24dp"
                    android:contentDescription="@string/descripcion_video"/>
                <Button
                    android:id="@+id/btnAudio"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/audio"
                    android:contentDescription="@string/descripcion_audio"
                    />

                <Button
                    android:id="@+id/btnCameraImage"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/ic_camera_alt_black_24dp"
                    android:contentDescription="@string/descripcion_cameraima" />

                <Button
                    android:id="@+id/btnCameraVideo"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/video"
                    android:contentDescription="@string/descripcion_cameravid" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>